# OSCMD2

./: CMakeLists-no-openssl.txt  CMakeLists.txt  README.md  appveyor.yml  generate_cmakefiles.pl
.circleci/: config.yml
src/common/: CMakeLists.txt
src/libopensc/: CMakeLists.txt  card-nqApplet.c  card-openpgp.c  card-starcos.c  cards.h  ctx.c  log.c  pkcs15-esign_qes.c  pkcs15-nqApplet.c  pkcs15-syn.c  pkcs15-syn.h
src/minidriver/: CMakeLists.txt  minidriver.c  versioninfo-minidriver.rc.in
src/pkcs11/: CMakeLists.txt  framework-pkcs15.c  versioninfo-pkcs11.rc.in
src/pkcs15init/: CMakeLists.txt
src/scconf/: CMakeLists.txt
src/sm/: CMakeLists.txt
src/smm/: CMakeLists.txt
src/tools/: CMakeLists.txt
src/ui/: CMakeLists.txt
win32/: winconfig.h.in
