#add_executable(opensc-explorer util.c opensc-explorer.c ${PROJECT_BINARY_DIR}/src/minidriver/version-tools.rc)
set(MANIFEST_FILE exe.manifest)
add_executable(opensc-explorer util.c opensc-explorer.c ${MANIFEST_FILE})
target_link_libraries(opensc-explorer common)
target_link_libraries(opensc-explorer scconf)
target_link_libraries(opensc-explorer libopensc)
target_link_libraries(opensc-explorer pkcs15init)
target_link_libraries(opensc-explorer pkcs11)
target_link_libraries(opensc-explorer ui)
#target_link_libraries(opensc-explorer sm)
#target_link_libraries(opensc-explorer smm)
target_link_libraries(opensc-explorer Comctl32)
target_link_libraries(opensc-explorer Ws2_32)

add_executable(opensc-tool util.c opensc-tool.c ${MANIFEST_FILE})
target_link_libraries(opensc-tool common)
target_link_libraries(opensc-tool scconf)
target_link_libraries(opensc-tool libopensc)
target_link_libraries(opensc-tool pkcs15init)
target_link_libraries(opensc-tool pkcs11)
target_link_libraries(opensc-tool ui)
#target_link_libraries(opensc-tool sm)
#target_link_libraries(opensc-tool smm)
target_link_libraries(opensc-tool Comctl32)
target_link_libraries(opensc-tool Ws2_32)
